--- a/index.html
+++ b/index.html
@@ -203,6 +203,27 @@
                     </ul>
                 </div>
 
+                <div class="columns is-vcentered interpolation-panel">
+                  <div class="column is-4 has-text-centered">
+                    <img src="./static/images/1/mark0.jpg" class="interpolation-image" alt="Interpolate start reference image.">
+                    <p class="is-bold">实物图</p>
+                  </div>
+                  <div class="column is-4 has-text-centered">
+                    <img src="./static/images/1/mark2.png" class="interpolation-image" alt="Interpolation end reference image.">
+                    <p class="is-bold">标记点云</p>
+                  </div>
+                  <div class="column is-4 has-text-centered">
+                    <img src="./static/images/1/mark2.png" class="interpolation-image" alt="Interpolation end reference image.">
+                    <p class="is-bold">激光点云</p>
+                  </div>
+                </div>
+                <div class="has-text-centered">
+                  <p class="has-text-weight-bold">在回环检测模块的帮助下，实时点云配准的累计误差造成的错层可以被检测出来，帮助如图大回环工件（约20M）扫描无错层</p>
+                </div>
+                
+                <br />
+                <br />
+
                 <h3 class="title is-4">1.2 纹理+特征拼接算法开发</h3>
                 <div class="content has-text-justified">
                     <ul>
@@ -218,6 +239,49 @@
                     </ul>
                 </div>
 
+                <div class="columns is-vcentered interpolation-panel">
+                  <div class="column is-6 has-text-centered">
+                    <img src="./static/images/1/image14.GIF" class="interpolation-image" alt="Interpolate start reference image.">
+                    <p class="is-bold">特征子增强后</p>
+                  </div>
+                  <div class="column is-6 has-text-centered">
+                    <img src="./static/images/1/image14.GIF" class="interpolation-image" alt="Interpolate start reference image.">
+                    <p class="is-bold">特征子增强前</p>
+                  </div>
+                </div>
+                <div class="has-text-centered">
+                  <p class="has-text-weight-bold">特征匹配改进效果</p>
+               </div>
+                <br /> 
+
+                <div class="columns">
+                  <div class="column is-3 has-text-centered">
+                    <img src="./static/images/1/girl_tune_old.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                  <div class="column is-4 has-text-centered">
+                    <img src="./static/images/1/stairs_tune_old.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                  <div class="column is-4 has-text-centered">
+                    <img src="./static/images/1/table_tune_old.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                </div>
+                <div class="columns">
+                  <div class="column is-3 has-text-centered">
+                    <img src="./static/images/1/girl_tune_new.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                  <div class="column is-4 has-text-centered">
+                    <img src="./static/images/1/stairs_tune_new.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                  <div class="column is-4 has-text-centered">
+                    <img src="./static/images/1/table_tune_new.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                </div>
+                <div class="has-text-centered">
+                  <p class="has-text-weight-bold">在一些弱纹理区域上提点和匹配能力增强，减少了很多错误的点云配准</p>
+                </div>
+                <br /> 
+                <br /> 
+
                 <h3 class="title is-4">1.3 混合拼接算法开发</h3>
                 <p class="has-text-weight-bold has-text-danger">公司嘉奖：三星（最高）BINGO创意奖</p>
                 <div class="content has-text-justified">
@@ -229,71 +293,90 @@
                         <li>大幅拓展扫描场景，扫描的稳定性，优化用户体验 </li>
                     </ul>
                 </div>
-            </div>
-        </div>
-
-        <!-- 2. -->
-
-        <div class="columns is-centered">
-            <div class="column is-full-width">
-                <h2 class="title is-3">2.散斑辅助激光线重建模块</h2>
-                <h3 class="title is-4">2.1 散斑信息辅助激光匹配</h3>
-                <div class="content has-text-justified">
-
+                <div class="columns is-vcentered interpolation-panel">
+                  <img src="./static/images/1/scan03.png" class="interpolation-image" alt="Interpolate start reference image.">
+                </div>
+                <div class="has-text-centered">
+                  <p class="has-text-weight-bold">混合拼接带来的扫描能力提升，使得无需标记点大场景扫描成为可能</p>
                 </div>
 
-                <h3 class="title is-4">2.2 图像特征相似度对激光重建的筛选</h3>
-                <p class="has-text-weight-bold has-text-danger">公开专利：基于图像特征相似度的激光线匹配方法</p>
-                <div class="content has-text-justified">
 
-                </div>
-
-                <div class="content has-text-justified">
-                    <ul>
-                        <li>优化了原有激光扫描中的飞线、少线等异常现象</li>
-                        <li>
-                            取缔了消费级彩色扫描仪的激光平面校验方式，从而减少标定流程优化用户体验
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <!-- 3. -->
-
-        <div class="columns is-centered">
-            <div class="column is-full-width">
-                <h2 class="title is-3">3.散斑扫描平面检测功能</h2>
-                <div class="content has-text-justified">
-                    <ul>
-                        <li>基于RANSAC算法，优化迭代策略，实现点云单平面提取算法</li>
-                        <li>
-                            基于单平面提取算法，完成多平面检测及背景平面剔除功能
-                        </li>
-                        <li>结合平面信息加入单帧点云特征丰富度计算，通过阻止丰富度过低时的点云配准来减少扫描过程中的错拼现象 </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <!-- 4. -->
-
-        <div class="columns is-centered">
-            <div class="column is-full-width">
-                <h2 class="title is-3">4.散斑扫描细节优化</h2>
-                <div class="content has-text-justified">
-                    <ul>
-                        <li>沿用特征点提取的思路，提取图像散斑特征周围的高质量重建点</li>
-                        <li>
-                            调整亚像素匹配中相似度计算模板，达到最优匹配准确度
-                        </li>
-                        <li>实现不同采样分辨率下的三维点重建，开发精细扫描功能</li>
-                    </ul>
-                </div>
             </div>
         </div>
     </div>
 </section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- 2. -->
+
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+          <h2 class="title is-3">2.散斑辅助激光线重建模块</h2>
+          <h3 class="title is-4">2.1 散斑信息辅助激光匹配</h3>
+          <div class="content has-text-justified">
+
+          </div>
+
+          <h3 class="title is-4">2.2 图像特征相似度对激光重建的筛选</h3>
+          <p class="has-text-weight-bold has-text-danger">公开专利：基于图像特征相似度的激光线匹配方法</p>
+          <div class="content has-text-justified">
+
+          </div>
+
+          <div class="content has-text-justified">
+              <ul>
+                  <li>优化了原有激光扫描中的飞线、少线等异常现象</li>
+                  <li>
+                      取缔了消费级彩色扫描仪的激光平面校验方式，从而减少标定流程优化用户体验
+                  </li>
+              </ul>
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- 3. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+          <h2 class="title is-3">3.散斑扫描平面检测功能</h2>
+          <div class="content has-text-justified">
+              <ul>
+                  <li>基于RANSAC算法，优化迭代策略，实现点云单平面提取算法</li>
+                  <li>
+                      基于单平面提取算法，完成多平面检测及背景平面剔除功能
+                  </li>
+                  <li>结合平面信息加入单帧点云特征丰富度计算，通过阻止丰富度过低时的点云配准来减少扫描过程中的错拼现象 </li>
+              </ul>
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+        <!-- 4. -->
+        <div class="columns is-centered">
+          <div class="column is-full-width">
+              <h2 class="title is-3">4.散斑扫描细节优化</h2>
+              <div class="content has-text-justified">
+                  <ul>
+                      <li>沿用特征点提取的思路，提取图像散斑特征周围的高质量重建点</li>
+                      <li>
+                          调整亚像素匹配中相似度计算模板，达到最优匹配准确度
+                      </li>
+                      <li>实现不同采样分辨率下的三维点重建，开发精细扫描功能</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
 
 <footer class="footer">
 </footer>
