--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 <div class="columns is-vcentered interpolation-panel">
                   <div class="column is-6 has-text-centered">
-                    <img src="./static/images/1/text_old.GIF" class="interpolation-image" alt="Interpolate start reference image.">
+                    <img src="./static/images/1/text_old.gif" class="interpolation-image" alt="Interpolate start reference image.">
                     <p class="is-bold">匹配算法增强前</p>
                   </div>
                   <div class="column is-6 has-text-centered">
